--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,39 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>My Awesome Watch</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <p>{{stopwatch}}</p>
+  <ng-container *ngIf="stopwatchState == false;else stopwatchRunning">
+    <ion-fab-button class="centering" (click)="startStopwatch()">
+      <ion-icon name="play"></ion-icon>
+    </ion-fab-button>
+  </ng-container>
+
+  <ng-template #stopwatchRunning>
+    <ion-fab-button class="centering" color="danger" (click)="stopStopwatch()">
+      <ion-icon name="stop"></ion-icon>
+    </ion-fab-button>
+  </ng-template>
+
+  <ion-item class="topMargin">
+    <ion-label>Timer</ion-label>
+    <ion-datetime displayFormat="HH:mm:ss" [(ngModel)]="timer"></ion-datetime>
+  </ion-item>
+
+  <p>{{timer}}</p>
+  <ng-container *ngIf="timeState == false;else timerRunning">
+    <ion-fab-button class="centering" (click)="startTimer()">
+      <ion-icon name="play"></ion-icon>
+    </ion-fab-button>
+  </ng-container>
+
+  <ng-template #timerRunning>
+    <ion-fab-button class="centering" color="danger" (click)="stopTimer()">
+      <ion-icon name="stop"></ion-icon>
+    </ion-fab-button>
+  </ng-template>
 </ion-content>
